# sfml-oculus

./: .gitmodules  .travis.yml  CMakeLists.txt  OVRWrapper.h  PLYMesh.cpp  README.md  SFMLScreen.cpp  SFMLScreen.h  main.cpp  ply_shader.frag
cmake/: FindEigen3.cmake
debian/: changelog  control  copyright
include/sfml-oculus/: OculusWindow.h
shaders/: ply_shader.frag  ply_shader.vert  postproc.frag  postproc.vert  sfmlscreen_shader.frag  sfmlscreen_shader.vert
src/: OVRRenderTexture.cpp  OVRRenderTexture.h  OVRWrapper.cpp  OVRWrapper.h  OculusWindow.cpp  OculusWindow.h  PLYMesh.cpp  PLYMesh.h  PostProcessing.cpp  PostProcessing.h  SFMLScreen.cpp  SFMLScreen.h  main.cpp  sfml-oculus-example.cpp
test/: PLYMesh.cpp  PLYMesh.h  test-sfmlscreen.cpp  testsfml-oculus.cpp
